--- a/error.html
+++ b/error.html
@@ -11,7 +11,7 @@
   <div id="preloader">
     <div id="loader"></div>
   </div>
-  <title>404 Error</title>
+  <title>4 0 4  E R R O R</title>
 </head>
 <body>
   <audio autoplay>
