--- a/ABOUT-ME.html
+++ b/ABOUT-ME.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title> Y O </title>
+        <title>A B O U T -_- M E</title>
 	<link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,600,700,900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="cssS/estilos.css">
 	<link rel="stylesheet" href="loader.css">
