--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <div id="loader"></div>
       </div>
 
-    <title>P O R T A F O L I O</title>
+    <title>P O R T A F O L I O 👨‍💻</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
