--- a/error.html
+++ b/error.html
@@ -23,7 +23,7 @@
     <picture>
       <source
         media="(min-width: 640px)"
-        srcset="./src/assets/graphics/Presentación1.png"
+        srcset="https://raw.githubusercontent.com/Im-Edwin/web/main/d.png"
       >
       <img
         src="./src/assets/graphics/klipartz.com (1).png"
