--- a/error.html
+++ b/error.html
@@ -24,7 +24,7 @@
       <source
         media="(min-width: 640px)"
         srcset="https://raw.githubusercontent.com/Im-Edwin/web/main/d.png"
-        srcset="./src/assets/graphics/Presentación1.png
+        srcset="./src/assets/graphics/Presentación1.png"
       >
       <img
         src="./src/assets/graphics/klipartz.com (1).png"
